--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "imports-loader": "^1.2.0",
+    "snapsvg": "^0.5.1",
+    "snapsvg-cjs": "0.0.6",
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-grid-layout": "^2.3.11",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
